se termino el RWD

--- a/portafolio.html
+++ b/portafolio.html
@@ -51,12 +51,12 @@
             <section class="portafolio" id="porta">
                 <h2><span>|</span> Portafolio</h2>
                 <div class="portafolio-container">
-                    <figure><img src="./img/tech1.jpg" alt="tech1" width="350" height="200"></figure>
-                    <figure><img src="./img/tech2.jpg" alt="tech2" width="350" height="200"></figure>
-                    <figure><img src="./img/tech3.jpg" alt="tech3" width="350" height="200"></figure>
-                    <figure><img src="./img/tech4.jpg" alt="tech4" width="350" height="200"></figure>
-                    <figure><img src="./img/tech5.jpg" alt="tech5" width="350" height="200"></figure>
-                    <figure><img src="./img/tech6.jpg" alt="tech6" width="350" height="200"></figure>
+                    <figure><img src="./img/tech1.jpg" alt="tech1"></figure>
+                    <figure><img src="./img/tech2.jpg" alt="tech2"></figure>
+                    <figure><img src="./img/tech3.jpg" alt="tech3"></figure>
+                    <figure><img src="./img/tech4.jpg" alt="tech4"></figure>
+                    <figure><img src="./img/tech5.jpg" alt="tech5"></figure>
+                    <figure><img src="./img/tech6.jpg" alt="tech6"></figure>
                 </div> 
             </section>
             <!-- SKILL -->
