--- a/portafolio.html
+++ b/portafolio.html
@@ -27,10 +27,10 @@
         <main>
             <!-- ABOUT -->
             <section class="about">
-                <h2> <span>|</span> About me</h2>
+                <h2> <span>|</span> About me </h2>
                 <div class="about-container">
                     <figure>
-                        <img src="./img/paolo.jpg" alt="Paolo Minaya" width="216" height="216">
+                        <img src="./img/paolo.jpg" alt="Paolo Minaya" width="216" height="216" >
                     </figure>
                     <div class="about-text-social">
                         <p>I am developer web with 3 years in experience in Backend and Frontend,also I'd learned diferents tecnologys
@@ -49,14 +49,14 @@
             </section>
             <!-- PORTAFOLIO -->
             <section class="portafolio" id="porta">
-                <h2><span>|</span> Portafolio</h2>
+                <h2><span>|</span> Portafolio </h2>
                 <div class="portafolio-container">
-                    <figure><img src="./img/tech1.jpg" alt="tech1"></figure>
-                    <figure><img src="./img/tech2.jpg" alt="tech2"></figure>
-                    <figure><img src="./img/tech3.jpg" alt="tech3"></figure>
-                    <figure><img src="./img/tech4.jpg" alt="tech4"></figure>
-                    <figure><img src="./img/tech5.jpg" alt="tech5"></figure>
-                    <figure><img src="./img/tech6.jpg" alt="tech6"></figure>
+                    <figure><img src="./img/tech1.png" alt="tech1"></figure>
+                    <figure><img src="./img/tech2.png" alt="tech2"></figure>
+                    <figure><img src="./img/tech3.png" alt="tech3"></figure>
+                    <figure><img src="./img/tech4.png" alt="tech4"></figure>
+                    <figure><img src="./img/tech5.png" alt="tech5"></figure>
+                    <figure><img src="./img/tech6.png" alt="tech6"></figure>
                 </div> 
             </section>
             <!-- SKILL -->
@@ -83,6 +83,18 @@
                     </div>
                     <div class="bar-title">
                         <h3>React</h3>
+                        <div class="bar">
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="bar-title">
+                        <h3>Bootstrap</h3>
+                        <div class="bar">
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="bar-title">
+                        <h3>Sass</h3>
                         <div class="bar">
                             <div></div>
                         </div>
