se agregÃo animacion

--- a/portafolio.html
+++ b/portafolio.html
@@ -16,7 +16,7 @@
                 < Paolo Minaya />
             </h1>
             <nav>
-                <ul class="menu">
+                <ul class="menu" id="menu">
                     <li><a href="#">About me</a></li>
                     <li><a href="#porta">Portafolio</a></li>
                     <li><a href="#skill">My skills</a></li>
@@ -49,7 +49,8 @@
             </section>
             <!-- PORTAFOLIO -->
             <section class="portafolio" id="porta">
-                <h2><span>|</span> Portafolio </h2>
+                <a href="#menu" class="to-top"></a>
+                <h2><span>|</span> Portafolio  </h2>
                 <div class="portafolio-container">
                     <figure><img src="./img/tech1.png" alt="tech1"></figure>
                     <figure><img src="./img/tech2.png" alt="tech2"></figure>
